fix: fix overflow login page issue

--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,16 +1,16 @@
 .wrapper {
-  min-height: 900px;
   background-size: cover;
   background-image: url(https://images.unsplash.com/photo-1484242857719-4b9144542727?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1280&q=80);
+  height: 100%;
 }
 
 .form {
   border-right: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-7));
-  min-height: 900px;
   max-width: 450px;
   padding: 30px;
   padding-top: 80px;
   border-radius: 0;
+  height: 100%;
 
   @media (max-width: $mantine-breakpoint-sm) {
     max-width: 100%;
